@@ -1,3 +1,9 @@
+The Better Mega Menu 8.x-1.0-dev, 2020-10-02
+--------------------------------------------
+- Issue #3172977 by Ramya Balasubramanian, dev.patrick: Unwanted special
+  characters in hook help.
+- Issue #3174465 by John.nie: Mega menu missing config_export definition
+  in its annotation.
 The Better Mega Menu 8.x-1.0-dev, 2020-09-11
 --------------------------------------------
 - Issue #3149011 by Project Update Bot, themodularlab: Automated Drupal 9 compatibility fixes
